<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_frame_bg_layer_bg">

        <TextView
            android:visibility="gone"
            android:id="@+id/titleBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/crimson_text_bold"
            android:text="@string/background"
            android:textColor="@color/app_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/titleBg">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnImage"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_custom_choose"
                android:fontFamily="@font/crimson_text_bold"
                android:gravity="center"
                android:text="@string/image"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnColor"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_custom_unchoose"
                android:fontFamily="@font/crimson_text_bold"
                android:gravity="center"
                android:text="@string/color"
                android:textColor="@color/app_color" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTop"
            tools:itemCount="10"
            tools:listitem="@layout/item_image"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTop"
            tools:itemCount="20"
            android:visibility="gone"

            tools:listitem="@layout/item_color_bg"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>