<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80545454"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/titleFame"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="-23dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="18dp"
            app:strokeWidth="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintDimensionRatio="1.41:0.44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_title_dialog_exit">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/single_marquee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/cookies_regular"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:strokeJoinStyle="miter" />

            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_dialog_exit"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2.7:1.32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/txtContent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:elevation="1dp"
                android:fontFamily="@font/bubblegum_sans_regular"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                android:textColor="@color/app_color10"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btnOk"
                app:layout_constraintEnd_toEndOf="@+id/imgInBgDialog"
                app:layout_constraintStart_toStartOf="@+id/imgInBgDialog"
                app:layout_constraintTop_toTopOf="@+id/imgInBgDialog"/>

            <ImageView
                android:id="@+id/imgInBgDialog"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginVertical="12dp"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/img_in_exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/rufing_personaluse"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                android:textColor="@color/app_color9"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnNo"
                app:layout_constraintEnd_toEndOf="@+id/imgInBgDialog"
                app:layout_constraintStart_toStartOf="@+id/imgInBgDialog"
                app:layout_constraintTop_toTopOf="@+id/imgInBgDialog"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:strokeWidth="0dp"
                android:visibility="gone"
                app:cardCornerRadius="36dp"
                app:cardBackgroundColor="@color/app_color10"
                app:layout_constraintBottom_toBottomOf="@+id/imgInBgDialog"
                app:layout_constraintDimensionRatio="1.01:0.36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtContent1" >
            <TextView
                android:id="@+id/txtOk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_btn_loading_yes"
                android:fontFamily="@font/bubblegum_sans_regular"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                 />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="36dp"
                app:cardBackgroundColor="@color/app_color9"
                app:layout_constraintEnd_toEndOf="@+id/imgInBgDialog"
                app:layout_constraintBottom_toBottomOf="@+id/imgInBgDialog"
                app:layout_constraintDimensionRatio="1.01:0.36"
                app:layout_constraintStart_toEndOf="@+id/btnNo"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtContent" >
                <TextView
                    android:id="@+id/txtYes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rufing_personaluse"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/tv_yes"
                     />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:strokeWidth="1dp"
                app:cardCornerRadius="36dp"
                app:strokeColor="@color/app_color9"
                app:cardBackgroundColor="@color/white"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="@+id/imgInBgDialog"
                app:layout_constraintDimensionRatio="1.01:0.36"
                app:layout_constraintEnd_toStartOf="@+id/btnYes"
                app:layout_constraintTop_toTopOf="@+id/btnYes">
                <TextView
                 android:id="@+id/txtNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/bubblegum_sans_regular"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textSize="16sp"
                    android:textColor="@color/app_color9"
                    />

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>