<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/titlePermission"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cookies_regular"
            android:text="@string/permission"
            android:textColor="@color/app_color2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/app_color"
            app:strokeJoinStyle="miter"
            app:strokeMiter="5dp"
            app:strokeWidth="2dp"
            style="@style/single_marquee"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_per"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePermission" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="18dp"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/imv" />

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/btnContinue"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_12_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl3">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:gravity="center"
                        android:text="@string/storage"
                        android:textColor="@color/app_color3"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/swiVibrate2"
                        android:layout_width="56dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/switch_off" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_12_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl3">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:gravity="center"
                        android:text="@string/notifications"
                        android:textColor="@color/app_color3"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/swiVibrate4"
                        android:layout_width="56dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/switch_off" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <com.catcreator.catmaker.meme.utils.OuterStrokeTextView
            android:id="@+id/btnContinue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans_regular"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="120dp"
            android:text="@string/continue2"
            app:outerStrokeColor="@color/app_color4"
            app:outerStrokeWidth="2dp"
            app:outerStrokeJoinStyle="miter"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
<!--        <FrameLayout-->
<!--            android:id="@+id/native_ads"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent">-->

<!--            <include layout="@layout/ads_native_big_btn_top_shimmer" />-->
<!--        </FrameLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
